# promptproof

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: make_demo.py
src/promptproof/: __init__.py  attacks.py  cli.py  dashboard.py  detectors.py  guards.py  harness.py  loader.py  models.py
tests/: test_attacks.py  test_cli.py  test_dashboard.py  test_detectors.py  test_guards.py  test_harness.py  test_loader.py  test_models.py
