[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "promptproof"
version = "0.1.0"
description = "Offline prompt-injection red-team test suite for LLM apps."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Viprasol Tech Private Limited", email = "support@viprasol.com" }]
keywords = [
    "prompt-injection",
    "jailbreak",
    "llm-security",
    "red-team",
    "ai-safety",
    "guardrails",
    "security-testing",
    "llmops",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5,<0.16",
    "mypy>=1.10",
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/Viprasol-Tech/promptproof"
Repository = "https://github.com/Viprasol-Tech/promptproof"
Issues = "https://github.com/Viprasol-Tech/promptproof/issues"
Website = "https://viprasol.com"

[project.scripts]
promptproof = "promptproof.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/promptproof"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4", "RUF"]
ignore = ["B008", "B027", "UP042"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
files = ["src"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
